--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint": "^4.18.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "jest": "^22.3.0",
+    "jest": "^22.4.4",
+    "randomatic": "^3.1.1",
     "regenerator-runtime": "^0.11.1",
     "rollup": "^0.56.2",
     "rollup-plugin-babel": "^3.0.3",
